fix spacing

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -38,7 +38,6 @@ h1 {
 
 .post_date {
     color: var(--dark-color);
-    margin-top: 3px;
 }
 
 .fa-star {
